# humoto

./: .gitignore  .gitmodules  AUTHORS.md  AUTHORS_8md.html  AUTHORS_8md_source.html  CHANGELOG.md  CHANGELOG_8md.html  CHANGELOG_8md_source.html  CMakeLists.txt  EigenTools.html  INSTALL.md  INSTALL_8md.html  INSTALL_8md_source.html  LICENSE.html  LICENSE_source.html  Makefile  README.md  README_8md.html  README_8md_source.html  active__set_8h.html  active__set_8h_source.html  annotated.html  blockmatrix_8h.html  blockmatrix_8h_source.html  blockmatrix__base_8h.html  blockmatrix__base_8h_source.html  blockmatrix__kronecker_8h.html  blockmatrix__kronecker_8h_source.html  bridges_2QuadProgpp_2interface_2quadprogpp_2solution_8h.html  bridges_2QuadProgpp_2interface_2quadprogpp_2solution_8h_source.html  bridges_2QuadProgpp_2interface_2quadprogpp_2solver_8h.html  bridges_2QuadProgpp_2interface_2quadprogpp_2solver_8h_source.html  bridges_2qpOASES_2interface_2qpoases_2solution_8h.html  bridges_2qpOASES_2interface_2qpoases_2solution_8h_source.html  bridges_2qpOASES_2interface_2qpoases_2solver_8h.html  bridges_2qpOASES_2interface_2qpoases_2solver_8h_source.html  bridges_2qpmad_2interface_2qpmad_2solution_8h.html  bridges_2qpmad_2interface_2qpmad_2solution_8h_source.html  bridges_2qpmad_2interface_2qpmad_2solver_8h.html  bridges_2qpmad_2interface_2qpmad_2solver_8h_source.html  (+1495 more)
bridges/QuadProgpp/: CMakeLists.txt
bridges/QuadProgpp/interface/: quadprogpp.h
bridges/config_msgpack/: CMakeLists.txt
bridges/config_msgpack/interface/: config_msgpack.h
bridges/config_yaml/: CMakeLists.txt
bridges/config_yaml/interface/: config_yaml.h
bridges/googletest/: CMakeLists.txt
bridges/obstacle_avoidance/: CMakeLists.txt  obstacle_avoidance.h
bridges/obstacle_avoidance/obstacles/: obstacle_base.h
bridges/qpOASES/: CMakeLists.txt
bridges/qpOASES/interface/: qpoases.h
bridges/qpmad/: CMakeLists.txt
bridges/qpmad/interface/: qpmad.h
bridges/rbdl/: CMakeLists.txt
bridges/rbdl/interface/: rbdl.h
cmake/: HumotoConfig.cmake.in  README  TargetArch.cmake  humoto_add_external_git_project.cmake  humoto_add_external_hg_project.cmake  humoto_add_external_svn_project.cmake  humoto_copy_dir_if_exists.cmake  humoto_copy_extra_test_files.cmake  humoto_copy_file_if_exists.cmake  humoto_define_regression_test.cmake  humoto_define_test.cmake  humoto_detect_func_macro.cmake  humoto_dump_variables.cmake  humoto_identify_git_commit.cmake  humoto_list_filenames.cmake  humoto_parse_test_dependencies.cmake  options_all.cmake  options_disablesolvers.cmake
core/config/: qpoases.yaml  stance_fsm_parameters.yaml
core/include/: config.h  eigentools.h  export_import.h  humoto.h  humoto_helpers.h  kktsolver.h  rigid_body.h  walking.h
core/include/config/: define_accessors.h
core/include/eigentools/: blockmatrix.h  blockmatrix_base.h  blockmatrix_kronecker.h  cross_product.h  eigentools.h
core/include/humoto/: active_set.h  configurable_optimization_problem.h  constants.h  constraints.h  constraints_base.h  constraints_mixins.h  control_problem.h  hierarchy.h  hierarchy_level.h  leftright.h  logger.h  model.h  optimization_problem.h  qp_problem.h  solution.h  solver.h  task.h  task_generic.h  time.h  utility.h  violations.h
core/include/rigid_body/: cubic_polynomial.h  point_mass_state.h  rigid_body_state.h  rotary_state.h  triple_integrator.h
core/include/walking/: foot_trajectory.h  point_mass_model_6z.h  robot_foot_parameters.h  stance_finite_state_machine.h
core/share/: gnu_ld_version_script.map
core/tests/: CMakeLists.txt  regression_test_000.cpp  regression_test_001.cpp  regression_test_005.cpp  regression_test_005.ref  test_000.cpp  utilities.h  utilities_regression.h
core/tests_include/: regression_test_helpers.h  solver_performance_test.h  test_helpers.h
doc/: Makefile  coding_policies.md  directory_layout.md  howto_configurable.md  howto_tasks.md  known_issues.md
doc/doxygen/: Doxyfile  Doxyfile.input  Makefile  doxygen_initialization.dox
doc/latex/: Makefile  bibliography.bib  documentation.tex  optimization.tex  pepper.bib  pepper.tex  reference.tex  texsetup.tex  wpg.bib  wpg.tex
doc/latex/Styles/: mymath.sty  wpg_notation_define.tex  wpg_notation_undefine.tex
modules/pepper_ik/: README
modules/pepper_ik/config/: README  hierarchies_planar.yaml  hierarchies_torso.yaml  initial_state_pepper_ik_planar.yaml  initial_state_pepper_ik_planar_default.yaml  initial_state_pepper_ik_tibia_default.yaml  initial_state_pepper_ik_torso_default.yaml  motion_parameters.yaml  motion_parameters_default.yaml  pepper_fixedwheels.urdf  pepper_fixedwheels_roottibia.urdf  pepper_fixedwheels_roottibia_planar.urdf  pepper_orig.urdf  rest_state_pepper_ik_planar.yaml  wbc_parameters.yaml
modules/pepper_ik/doc/: Makefile  documentation.tex  pepper.tex  pepper_notation_define.tex
modules/pepper_ik/include/: pepper_ik.h
modules/pepper_ik/tests/: CMakeLists.txt  hierarchy.h  regression_test_000.cpp  regression_test_000.ref  regression_test_001.cpp  test_000.cpp  test_001.cpp  test_002.cpp  test_002.yaml  test_003.cpp  test_003_process.m  test_004.cpp  test_004.yaml  test_004_base_motion.yaml  test_004_tag_velocity.yaml  utilities.h  utilities_regression.h
modules/pepper_mpc/: README
modules/pepper_mpc/config/: hierarchies.yaml  initial_state_pepper.yaml  initial_state_pepper_default.yaml  motion_parameters_circle.yaml  motion_parameters_circle_fast.yaml  motion_parameters_line.yaml  motion_parameters_stand.yaml  mpc_parameters.yaml  mpc_parameters_subsampling10.yaml  (+1 more)
modules/wpg03/: README
modules/wpg04/: README
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  (+140 more)
(+154 files in other folders)
